# DocsGenAI

./: README.md  install.sh  pyproject.toml  ruff.toml  test_file_generation.py
.cursor/rules/: index.mdc  project_overview.mdc  python_standards.mdc  testing_guide.mdc  usage_guide.mdc
docs/: architecture_diagram.md  ast_analyzer_spec.md  dependency_graph_report.md  dependency_graph_spec.md  doc_orchestrator_spec.md  master_implementation_plan.md  testing_strategy.md  user_guide.md  visualization_spec.md
genai_docs/: __init__.py  ast_analyzer.py  cache.py  cli.py  config.py  core_types.py  dependency_analyzer.py  dependency_graph.py  dependency_graph_builder.py  documentation_generator.py  exceptions.py  file_manager.py  import_analyzer.py  import_extractor.py  llm_client.py  main.py  progress.py  tree_builder.py  version.py
genai_docs/templates/: child_documentation.j2  dependency_context.j2  module_documentation.j2  package_documentation.j2  project_child_documentation.j2  project_documentation.j2
tests/: test_file_generation.py  test_foundation_components.py
tests/integration/: test_documentation_workflow.py
tests/unit/ast_analyzer/: __init__.py  test_ast_analyzer.py
tests/unit/cli/: test_cli.py
tests/unit/config/: test_config.py
tests/unit/core_types/: __init__.py  test_core_types.py
tests/unit/dependency_graph/: __init__.py  test_dependency_graph.py
tests/unit/documentation_generator/: test_documentation_generator.py
tests/unit/file_manager/: __init__.py  test_file_manager.py
tests/unit/llm_client/: test_llm_client.py
tests/unit/tree_builder/: __init__.py  test_tree_builder.py
